    + Parts of the help documentation are out-of-date.
- Bugs that cannot be duplicated:
  Please contact us with more information!
    + [1051166] copying orders to clipboard
    + [1116567] Map->Jpeg exports hangs jDip
    + [1084155] Errors in enter multiple orders breaks menu
    + XJFileDialog already-in-use bug (submitted online)
- New or Improved Features:
    + Ancient Med variant and symbols added (thanks to Stefano Costantini)
    + Renaissance variant added (thanks to Ian Scrivins)
    + Smaller (by more than 1 MB) and faster.
    + New commandline option: "-defaultgui". This forces jDip to the default
      GUI, without any enhancements. Use this if jDip will not start (this may
      happen on some versions of Linux). This option has not been extensively
      tested, and feedback regarding its use would be helpful.
    + Online bug submission (which occurs with severe jDip errors) is now more
      detailed.
    + Improved logging: logging occurs to a circular memory buffer, enabling
      more helpful and detailed online bug reports.
    + Open dialogs now are closed if a new variant is loaded or opened.
    + Splash screen changed to original pastel style.
    + Upgraded rendering system to Batik 1.6.
    + Upgraded other dependencies to new versions.
- Fixed bugs
    + Impossible Rick-click on a Mac [1124808]
        - Command + Mouse button emulates right button
        - Shift + Mouse button emulates middle button 
    + jDip doesn't start under Linux [1053723]
        - Should jDip not start with some versions of Linux, try the 
          "-defaultgui" option on the command line.
    + jDip does not see Shortcut Folders [1051678]
        - This works with Java 5 (1.5). This is a known problem with some 
          versions of Java 1.4.x. 
    + Adjudication error: No convoy, but bounce [1205531, 1116568, 1053458]
        - This is now fixed. As it turns out, one of the test cases 