@@ -29,9 +29,11 @@ For best results, it is recommended that Java 5 (1.5) is used to run jDip.
     + [1084155] Errors in enter multiple orders breaks menu
     + XJFileDialog already-in-use bug (submitted online)
 - New or Improved Features:
+    + Aberration V variant and symbols added (thanks to Stefano Costantini)
     + Ancient Med variant and symbols added (thanks to Stefano Costantini)
     + Renaissance variant added (thanks to Ian Scrivins)
     + Smaller (by more than 1 MB) and faster.
+	+ Mac OS X: better file chooser.
     + New commandline option: "-defaultgui". This forces jDip to the default
       GUI, without any enhancements. Use this if jDip will not start (this may
       happen on some versions of Linux). This option has not been extensively
